# esp32-aldl

./: CMakeLists.txt  README.md  esp32-aldl.ino  sdkconfig.defaults
.gitea/workflows/: build.yml
.github/workflows/: arduino-build.yml  build.yml
main/: CMakeLists.txt  decoder.c  decoder.h  main.c
tests/: CMakeLists.txt  test_decoder.c
